--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,22 +12,14 @@ jobs:
       container: python:3.9-slim
     
       steps:
-        - name: Checkout
-          uses: actions/checkout@v3
-
+        - uses: actions/checkout@v2
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v1
+        - name: Login to IBM Cloud Container Registry
+          run: |
+            docker login us.icr.io -u ${{ secrets.IBM_CLOUD_REGISTRY_USERNAME }} -p ${{ secrets.IBM_CLOUD_REGISTRY_API_KEY }}
+        - name: Build and Push
+          run: |
+            docker build -t us.icr.io/ibm1234/pypy:latest .
+            docker push us.icr.io/ibm1234/pypy:latest
 
-        - name: Log in to IBM Cloud Container Registry
-          uses: docker/login-action@v1
-          with:
-            registry: us.icr.io
-            username: ${{ secrets.IBM_CLOUD_REGISTRY_USERNAME }}
-            password: ${{ secrets.IBM_CLOUD_REGISTRY_API_KEY }}
-    
-        - name: Build and push Docker image
-          uses: docker/build-push-action@v2
-          with:
-            context: .
-            push: true
-            tags: us.icr.io/ibm1234/my-image:${{ github.sha }}
