--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,19 +7,18 @@ on:
     branches: [ "main" ]
 
 jobs:
-    build:
-      runs-on: ubuntu-latest
-      container: python:3.9-slim
-    
-      steps:
-        - uses: actions/checkout@v2
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v1
-        - name: Login to IBM Cloud Container Registry
-          run: |
-            docker login us.icr.io -u ${{ secrets.IBM_CLOUD_REGISTRY_USERNAME }} -p ${{ secrets.IBM_CLOUD_REGISTRY_API_KEY }}
-        - name: Build and Push
-          run: |
-            docker build -t us.icr.io/ibm1234/pypy:latest .
-            docker push us.icr.io/ibm1234/pypy:latest
+  build:
+    runs-on: ubuntu-latest
+    container: docker:20.10.9
 
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to IBM Cloud Container Registry
+        run: |
+          docker login us.icr.io -u ${{ secrets.IBM_CLOUD_REGISTRY_USERNAME }} -p ${{ secrets.IBM_CLOUD_REGISTRY_API_KEY }}
+      - name: Build and Push
+        run: |
+          docker build -t us.icr.io/ibm1234/pypy:latest .
+          docker push us.icr.io/ibm1234/pypy:latest
