--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Login to IBM Cloud Container Registry
         run: |
-          docker login us.icr.io -u ${{ secrets.IBM_CLOUD_REGISTRY_USERNAME }} -p ${{ secrets.IBM_CLOUD_REGISTRY_API_KEY }}
+          echo ${{ secrets.IBM_CLOUD_REGISTRY_API_KEY }} | docker login -u iamapikey --password-stdin us.icr.io
       - name: Build and Push
         run: |
           docker build -t us.icr.io/ibm1234/pypy:latest .
